# sql2ldap

./: .dockerignore  .drone.star  Cargo.toml  Dockerfile  README.md
examples/: test.toml
examples/openldap/: README.md  customer_data_less.sql  docker-compose.yaml  initialize-ldap.sh  sql2ldap.toml
examples/openldap/ldap_conf/: 01_olcLdapMod.ldif  02_olcLdapDb.ldif  03_olcFrontendSizeLim.ldif  04_data.ldif
examples/simple/: README.md  customer_create.sql  customer_data.sql  docker-compose.yaml  sql2ldap.toml
src/: config.rs  ldap_session.rs  main.rs
